--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "test": "npm run jshint && npm run mocha"
   },
   "dependencies": {
-    "memory-fs": "^0.3.0",
     "microdash": "~1",
+    "mock-fs": "^3.9.0",
     "resolve": "^1.1.7"
   },
   "devDependencies": {
